@@ -513,8 +513,7 @@ static void addKey(CMPIObjectPath * op, char *kd, int ref)
    *val = 0;
    val++;
    if (ref) {
-     char * msg;
-     CMPIObjectPath *keyOp = getObjectPath(val,&msg);
+     CMPIObjectPath *keyOp = getObjectPath(val,NULL);
      op->ft->addKey(op, kd, (CMPIValue*)&keyOp, CMPI_ref);
    } else if (*val == '"') {
       val++;
@@ -597,13 +596,13 @@ CMPIObjectPath *getObjectPath(char *path, char **msg)
          break;
       if (*p == '"') {
          if (*(p - 1) != '=') {
-            *msg = "Incorrectly quoted string 1";
+            if(msg) *msg = "Incorrectly quoted string 1";
             free(origu);
             return NULL;
          }
          p++;
          if ((p = strchr(p, '"')) == NULL) {
-            *msg = "Unbalanced quoted string";
+            if(msg) *msg = "Unbalanced quoted string";
             free(origu);
             return NULL;
          }
